traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:16: error: not found: value diag
  if (diag < 5) // si avant gd diago 
      ^TraversalDiagonal:24: error: not found: value diag
        diag+=1
        ^TraversalDiagonal:38: error: not found: value diag
  else if(diag>=6) // si apr?s gd diago (plus besoin de compteur)
          ^